# dfm-evals

./: LUMI_INTEGRATION_PLAN.md  README.md  creative_writing_da_small.jsonl  euroeval.md  modal-patch.md  pyproject.toml
configs/sandboxes/: prime-sandbox.yaml
dfm_evals/: __init__.py  _registry.py  cli.py  eee_export.py  eval-sets.yaml
dfm_evals/sandboxes/: __init__.py  modal.py  prime.py
dfm_evals/scorers/: __init__.py  gleu.py
dfm_evals/tasks/: multi_wiki_qa.py
dfm_evals/tournament/: _provenance.py  store.py  types.py
lumi/: README.md  euroeval_custom_datasets.py  euroeval_submit.sh  install_overlay_dfm_evals.sh  results_table.sh  run_euroeval.sbatch  run_suite.sbatch  submit.sh  view.sh
tests/: test_cli.py  test_tournament_provenance.py
