[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfm-evals"
version = "0.1.0"
description = "Minimal eval CLI and tasks for inspect_ai"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Company" }]
dependencies = [
  "datasets>=2.0",
  "inspect_ai",
  "prime>=0.5.42",
  "prime-sandboxes>=0.2.16",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "trueskill>=0.4.5",
  "typing_extensions>=4.0",
]

[project.optional-dependencies]
comet = [
  "torch",
  "transformers>=4.40",
  "huggingface_hub>=0.20",
]
harbor = [
  "inspect-harbor; python_version >= '3.12'",
]
sandboxes = [
  "inspect-sandboxes; python_version >= '3.12'",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6.5"]

[project.scripts]
evals = "dfm_evals.cli:main"

[project.entry-points.inspect_ai]
dfm_evals = "dfm_evals._registry"

[tool.setuptools.packages.find]
where = ["."]
include = ["dfm_evals*"]

[tool.setuptools.package-data]
dfm_evals = [
  "eval-sets.yaml",
  "tasks/bfcl/translations/exec_simple/*.json",
  "tasks/piqa/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["gorilla"]

[tool.ruff.lint]
# Keep default rule set and add import sorting.
select = ["E4", "E7", "E9", "F", "I"]
